fix: adjust form appearance and improve styling in cadastro component

--- a/web/src/app/pages/categorias/components/cadastro/cadastro.html
+++ b/web/src/app/pages/categorias/components/cadastro/cadastro.html
@@ -1,5 +1,4 @@
-<form tuiAppearance="floating" tuiCardLarge tuiForm="m" [formGroup]="categoriaForm" (ngSubmit)="saveCategoria()">
-
+<form tuiForm="l" [formGroup]="categoriaForm" (ngSubmit)="saveCategoria()">
     <tui-textfield>
         <label tuiLabel for="nome">Nome da Categoria *</label>
         <input tuiTextfield id="nome" formControlName="nome" type="text" placeholder="Digite o nome da categoria" />
