fix: remove unnecessary uiAppearance attribute and improve form structure in cadastro component

--- a/web/src/app/pages/movimentos/components/cadastro/cadastro.html
+++ b/web/src/app/pages/movimentos/components/cadastro/cadastro.html
@@ -1,4 +1,4 @@
-<form uiAppearance="floating" tuiCardLarge tuiForm="l" [formGroup]="movimentoForm" (ngSubmit)="onSubmit()">
+<form tuiForm="l" [formGroup]="movimentoForm" (ngSubmit)="onSubmit()">
   <div class="flex gap-1">
     <tui-textfield>
       <label tuiLabel for="periodo">Data *</label>
