--- a/web/src/app/pages/orcamentos/components/cadastro/cadastro.html
+++ b/web/src/app/pages/orcamentos/components/cadastro/cadastro.html
@@ -1,4 +1,4 @@
-<form uiAppearance="floating" tuiCardLarge tuiForm="m" [formGroup]="orcamentoForm" (ngSubmit)="onSubmit()">
+<form tuiForm="l" [formGroup]="orcamentoForm" (ngSubmit)="onSubmit()">
     <tui-textfield>
         <label tuiLabel for="periodo">Período *</label>
         <input placeholder="Selecione o mês" tuiInputMonth formControlName="periodo" />
