--- a/web/src/app/pages/movimentos/movimentos.html
+++ b/web/src/app/pages/movimentos/movimentos.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="header">
         <h2>Gerenciar Movimentações</h2>
-        <button tuiButton appearance="primary" size="m" (click)="openFormModal()">
+        <app-button-float appearance="primary" size="l" (click)="openFormModal()">
             Nova Movimentação
-        </button>
+        </app-button-float>
     </div>
 
     <tui-tabs-with-more [(activeItemIndex)]="activeItemIndex" *ngIf="periodos().length">
