--- a/web/src/app/shared/components/timeline/timeline.component.html
+++ b/web/src/app/shared/components/timeline/timeline.component.html
@@ -8,14 +8,16 @@
 
             @for (item of group.items; track item.id) {
                 <div class="timeline-item" (click)="onEdit(item)">
-                    <div class="item-icon" [ngClass]="getIconClass(item.categoriaTipo)">
-                        <tui-icon [icon]="getIcon(item.categoriaTipo)" />
-                    </div>
-                    <div class="item-content">
-                        <span class="item-category">{{ item.categoriaNome }}</span>
-                        @if (item.descricao) {
-                            <span class="item-description">{{ item.descricao }}</span>
-                        }
+                    <div class="timeline-item-description">
+                        <div class="item-icon" [ngClass]="getIconClass(item.categoriaTipo)">
+                            <tui-icon [icon]="getIcon(item.categoriaTipo)" />
+                        </div>
+                        <div class="item-content">
+                            <span class="item-category">{{ item.categoriaNome }}</span>
+                            @if (item.descricao) {
+                                <span class="item-description">{{ item.descricao }}</span>
+                            }
+                        </div>
                     </div>
                     <div class="item-actions">
                         <span class="item-valor" [ngClass]="getValorClass(item.categoriaTipo)">
