--- a/web/src/app/pages/movimentos/movimentos.scss
+++ b/web/src/app/pages/movimentos/movimentos.scss
@@ -3,6 +3,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
+        flex-wrap: wrap;
         gap: 2rem;
         padding-block: 1.5rem;
 
