--- a/web/src/app/pages/movimentos/movimentos.scss
+++ b/web/src/app/pages/movimentos/movimentos.scss
@@ -2,7 +2,7 @@
     .summary {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: start;
         flex-wrap: wrap;
         gap: 2rem;
         padding-block: 1.5rem;
