feat: adicionado opcao de duplicar movimentacao

--- a/web/src/app/pages/movimentos/movimentos.html
+++ b/web/src/app/pages/movimentos/movimentos.html
@@ -58,7 +58,8 @@
                 <app-timeline
                     [items]="timelineItems()"
                     (edit)="openFormModal($event)"
-                    (delete)="confirmDelete($event)">
+                    (delete)="confirmDelete($event)"
+                    (duplicate)="duplicateItem($event)">
                 </app-timeline>
             </div>
         </div>
